--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(./img/Landscape_Pic.png);
+	background-image: url(./img/Landscape_Pic.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
