--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ p {
   flex-direction: column;
   padding: 15px;
   border-radius: 20px;
-  /* background-image: url(./img/img-1.png); */
+  background-image: url(./img/potrait.jpg);
   background-size: cover;
   margin: 10px 5%;
   position: relative;
@@ -351,6 +351,8 @@ p {
 #services .service-item:hover {
   border: 3px solid rgb(67, 82, 75);
   background-color: rgb(0, 255, 106);
+  background-image: url(./img/potrait.jpg);
+  transform: scale(1.1);
 }
 
 #services .service-item::after {
@@ -372,12 +374,14 @@ p {
 }
 
 #services .service-item h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: white;
   margin-bottom: 10px;
   text-transform: uppercase;
 }
-
+/* #services .service-item h2 span {
+  color: rgb(138, 21, 6);
+} */
 #services .service-item p {
   color: white;
   text-align: justify;
@@ -418,7 +422,7 @@ p {
 #projects .project-info {
   padding: 30px;
   flex-basis: 50%;
-  height: 100%;
+  height: 10px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -433,18 +437,22 @@ p {
 }
 
 #projects .project-info h2 {
-  font-size: 1.8rem;
-  font-weight: 500;
+  font-size: 2rem;
+  font-weight: 900;
   margin-top: 10px;
+  color: rgb(170, 167, 173);
 }
 
 #projects .project-info p {
-  color: white;
+  color: rgba(255, 255, 255, 0.623);
+  font-weight: 200;
 }
-
+#projects .project-info a {
+  color: rgb(170, 167, 173);
+}
 #projects .project-img {
   flex-basis: 50%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
   position: relative;
 }
