--- a/style.css
+++ b/style.css
@@ -559,8 +559,101 @@ p {
   color: white;
   text-align: justify;
 }
+/* #services .service-bottom .service-item {
+  flex-basis: 22%;
+  margin: 1.5%;
+} */
 
 /* End educations Section */
+
+/* awards Section */
+#awards .awards {
+  flex-direction: column;
+  text-align: center;
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+#awards .award-top {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+#awards .award-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+#awards .award-item {
+  flex-basis: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: top;
+  flex-direction: column;
+  padding: 15px;
+  border-radius: 20px;
+  background-image: url(./img/award.avif);
+  background-size: cover;
+  margin: 10px 5%;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  cursor: pointer;
+  height: 100%;
+  font-size: 36px;
+  text-align: center;
+  width: 300px;
+  border: 3px solid rgb(67, 82, 75);
+}
+#awards .award-item:hover {
+  border: 3px solid rgb(67, 82, 75);
+  background-color: rgb(0, 255, 106);
+  background-image: url(./img/award.avif);
+  transform: scale(1.1);
+}
+
+#awards .award-item::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  opacity: 0.9;
+  z-index: -1;
+}
+
+#awards .award-bottom .icon {
+  height: 100px;
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+#awards .award-item h2 {
+  font-size: 2.5rem;
+  color: white;
+  margin-bottom: 10px;
+  /* text-transform: uppercase; */
+}
+/* #awards .award-item h2 span {
+  color: rgb(138, 21, 6);
+} */
+#awards .award-item p {
+  color: white;
+  text-align: justify;
+}
+#awards .award-bottom .award-item {
+  flex-basis: 45%;
+  margin: 1.5%;
+}
+
+/* End awards Section */
+
 /* About Section */
 #about .about {
   flex-direction: column-reverse;
@@ -910,7 +1003,6 @@ p {
   }
 
   /* End header */
-
   #services .service-bottom .service-item {
     flex-basis: 22%;
     margin: 1.5%;
